package es.sfernandez.qp.views.contents

interface ContentView