package es.sfernandez.qp.views.contents

interface GroupOfContentsView {

    fun add(contentView: ContentView)

}