package es.sfernandez.qp.views.contents

interface HasContentsView {

    var contentsView: GroupOfContentsView

}