package es.sfernandez.qp.views.question

import es.sfernandez.qp.views.contents.HasContentsView

interface ExplanationView : HasContentsView